--- a/_posts/03-15-2020-LeetCode-76.md
+++ b/_posts/03-15-2020-LeetCode-76.md
@@ -1,11 +1,12 @@
 ---
 layout: post
 title: Leetcode 76
-date: 03/15/2020
+date: 2020-03-15
 Author: Kenan Xiao
 categories: 
 tags: [Leetcode, document]
 comments: true
+toc: true
 --- 
 
 ## Leetcode 76. Minimum Window Substring
