--- a/_posts/03-15-2020-LeetCode-76.md
+++ b/_posts/03-15-2020-LeetCode-76.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Leetcode 76
-date: 2020-03-15
-Author: Kenan Xiao
-categories: 
-tags: [Leetcode, document]
+title: LOFFER使用基础教程
+date: 2019-06-02
+author: 来自中世界
+tags: [sample, document]
 comments: true
 toc: true
---- 
+pinned: true
+---
 
 ## Leetcode 76. Minimum Window Substring
 
