Add the second blog about ABM

--- a/_posts/2020-03-15-LeetCode-76.md
+++ b/_posts/2020-03-15-LeetCode-76.md
@@ -22,7 +22,7 @@ Output: "BANC"
 
 **Solution:**
 
-```
+```java
 class Solution {
     public String minWindow(String s, String t) {
         if (s == null || t == null || s.length() == 0 || t.length() == 0) {
@@ -96,3 +96,4 @@ class Solution {
     }
 }
 ```
+
